fix: the footer appearance on mobile

--- a/wwwroot/src/scss/Shared/Layout.scss
+++ b/wwwroot/src/scss/Shared/Layout.scss
@@ -51,7 +51,8 @@ footer {
   margin-top: auto;  
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+  line-height: 3.75rem; /* Vertically center the text there */
+  font-size: smaller;
 }
 
 /* Popover styles
